--- a/pages/index.html
+++ b/pages/index.html
@@ -2,129 +2,134 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Concept Website</title>
     <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
+<header>
+    <nav>
+        <ul>Case Studies</ul>
+        <ul>Services</ul>
+        <ul>Contact Us</ul>
+        <!--           <a href="#"> <ul>Case Studies</ul></a>-->
+        <!--           <a href="#"> <ul>Services</ul></a>-->
+        <!--           <a href="#"> <ul>Contact Us</ul></a>-->
+    </nav>
 
+    <div class="header-text">
+        <h1>Your website is an investment in the success of your business.</h1>
+        <h3>We are here to help you succeed.</h3>
+        <button type="submit" class="button-top">Let's work together</button>
+    </div>
 
+    <img src="/assets/squiggle_line_stripe.svg" alt="squiggle-line" class="drawing"/>
+</header>
 
-    <header>
-        <nav>
-            <ul></ul>
-            <ul></ul>
-            <ul></ul>
-        </nav>
-
-        <div>
-            <h1></h1>
-            <h3></h3>
-            <button type="submit"></button>
+<main>
+    <section class="top-blok">
+        <div class="top-blok-text">
+            <h2>Rekupe is a digital agency in Los Angeles. We use strategic UX, SEO optimization and beautiful visual designs to help your business grow. We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.
+                <span class="top-blok-small-text">Have a question? <a href="#">Click here</a> to contact us!</span></h2>
         </div>
+    </section>
 
-        <img src="" alt="">
-    </header>
-
-    <main>
-        <section>
-            <div>
-                <h2></h2>
-                <p></p>
+    <section class="image-area">
+        <article class="image-article">
+            <div class="text-pair">
+                <h2>Rolling Stone</h2>
+                <img src="/assets/squiggle_line.svg" alt="squiggle line" class="img-pair"/>
+                <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.</p>
+                <a href="#">View project</a>
             </div>
-        </section>
+            <span class="img-wrapper"><img src="/assets/work-image-01.jpg.jpeg" alt="workdesk Rolling Stones"></span>
+        </article>
 
-        <section>
-            <article>
-                <div>
-                    <h2></h2>
-                    <img src="" alt="">
-                    <p></p>
-                    <a href=""></a>
-                </div>
-                <img src="" alt="">
-            </article>
-
-            <article>
-                <div>
-                    <h2></h2>
-                    <img src="" alt="">
-                    <p></p>
-                    <a href=""></a>
-                </div>
-                <img src="" alt="">
-            </article>
-
-            <article>
-                <div>
-                    <h2></h2>
-                    <img src="" alt="">
-                    <p></p>
-                    <a href=""></a>
-                </div>
-                <img src="" alt="">
-            </article>
-        </section>
-
-        <section>
-            <article>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </article>
-
-            <article>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </article>
-
-            <article>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </article>
-
-            <article>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </article>
-
-            <article>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </article>
-
-            <article>
-                <img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </article>
-        </section>
-
-        <section>
-            <div>
-                <form action="">
-                    <label for=""></label>
-                    <input type="text">
-
-                    <label for=""></label>
-                    <input type="text">
-
-                    <label for=""></label>
-                    <input type="text">
-
-                    <button></button>
-                </form>
+        <article class="image-article">
+            <div class="text-pair">
+                <h2>Variety</h2>
+                <img src="/assets/squiggle_line.svg" alt="squiggle line" class="img-pair">
+                <p>Variety is an industry leader for breaking entertainment news, reviews and box office results with archive of content dating back to 1905.</p>
+                <a href="#">View project</a>
             </div>
-        </section>
-    </main>
-    
-    <footer>
-        <p></p>
-    </footer>
+            <span class="img-wrapper"><img src="/assets/work-image-02.jpg.jpeg" alt="workdesk Variety"></span>
+        </article>
+
+        <article class="image-article">
+            <div class="text-pair">
+                <h2>Worth</h2>
+                <img src="/assets/squiggle_line.svg" alt="squiggle line" class="img-pair">
+                <p>A global media platform connecting a community that embraces worth beyond wealth.</p>
+                <a href="#">View project</a>
+            </div>
+            <span class="img-wrapper"><img src="/assets/work-image-03.jpg.jpeg" alt="workdesk Variety 500"></span>
+        </article>
+    </section>
+
+    <section class="service-area">
+        <article class="article-blok">
+            <img src="/assets/icon_copywriting.svg.svg" alt="icon webdesign"/>
+            <h3>Web Design</h3>
+            <p>Good web design is how companies stand out from their competitors. High quality web design leads to increased user conversion and engagement. Through a proven web design process, we help clients launch websites and products that improve on their bottom line.</p>
+        </article>
+
+        <article class="article-blok">
+            <img src="/assets/icon_web-development.svg" alt="web development">
+            <h3>Web Development</h3>
+            <p>Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites with a mobile first approach and ensure that our code quality is clean, organized and performant. Already have a design but need it developed? We’re here to help!</p>
+        </article>
+
+        <article class="article-blok">
+            <img src="/assets/icon_ux.svg" alt="user experience">
+            <h3>User Experience</h3>
+            <p>In order to build successful products you have to understand the user. We create user personas, wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape the product and can quickly eliminate potential risks – saving you time and money.</p>
+        </article>
+
+        <article class="article-blok">
+            <img src="/assets/icon_graphic-design.svg" alt="logo design and branding">
+            <h3>Logo Design + Branding</h3>
+            <p>Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable logos and brand identity. The best brands stand out from the crowd by having a clear and unique point of view. We will work with you to understand your vision and help create a unique brand identity and style guide for your company.</p>
+        </article>
+
+        <article class="article-blok">
+            <img src="/assets/icon_seo.svg" alt="search engine optimalisation">
+            <h3>SEO</h3>
+            <p>Do you want your site to rank higher in search results? Google is constantly changing their algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make sure your website it optimized, providing you the best opportunities for organic search exposure.</p>
+        </article>
+
+        <article class="article-blok">
+            <img src="/assets/icon_copywriting.svg.svg" alt="copy writing">
+            <h3>Copy Writing</h3>
+            <p>Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of voice will help you stand out from the crowd and build brand loyalty. We work with you to establish your brand bible and ensure your messaging is focused and targeted.</p>
+        </article>
+    </section>
+
+    <section class="form-area">
+        <div class="text-form-pair">
+            <h1>Let's work together</h1>
+            <p>Have a question? Need a quote? Let us know!</p>
+            <form onsubmit="">
+
+                <label for=""></label>
+                <input type="text" placeholder="Name">
+
+                <label for=""></label>
+                <input type="email" placeholder="Email">
+
+                <label for=""></label>
+                <input type="text" placeholder="Message">
+
+                <button></button>
+            </form>
+
+
+        </div>
+    </section>
+</main>
+
+<footer>
+    <p>Business website opdracht © NOVI Hogeschool 2022</p>
+</footer>
 
 </body>
 </html>
