Aanpassingen gemaakt + form en 3-hoek toegevoegd

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Concept Website</title>
@@ -8,7 +8,7 @@
 
 <body>
 <header class="outer-container">
-    <div class="inner-container positie-rel">
+    <div class="inner-container">
         <nav>
             <ul>
                 <li><a href="#image-area">Case Studies</a></li>
@@ -20,18 +20,25 @@
         <div class="header-text">
             <h1>Your website is an investment in the success of your business.</h1>
             <h3>We are here to help you succeed.</h3>
-            <button type="button" name="first-pinky" class="top-button">Let's work together</button>
+            <button type="button" name="first-pinky-button" class="button">Let's work together</button>
         </div>
 
         <img src="/assets/squiggle_line_stripe.svg" alt="squiggle-line" class="drawing"/>
     </div>
+    <div class="triangle top-driehoek"></div>
+
 </header>
 
 <main>
-    <section class="introduction">
-        <div class="introduction-text">
-            <h2>Rekupe is a digital agency in Los Angeles. We use strategic UX, SEO optimization and beautiful visual designs to help your business grow. We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h2>
-            <p class="introduction-small-text">Have a question? <a href="#form-area">Click here</a> to contact us!</p>
+    <section class="outer-container introduction">
+        <div class="inner-container">
+            <div class=" introduction-text">
+                <h2>Rekupe is a digital agency in Los Angeles. We use strategic UX, SEO optimization and beautiful
+                    visual designs to help your business grow. We see every project as a fresh opportunity, pushing
+                    ourselves to create new digital experiences.</h2>
+                <p class="introduction-small-text">Have a question? <a href="#form-area">Click here</a> to contact us!
+                </p>
+            </div>
         </div>
 
     </section>
@@ -42,17 +49,20 @@
                 <div class="text-pair">
                     <h2>Rolling Stone</h2>
                     <img src="/assets/squiggle_line.svg" alt="squiggle line" class="img-pair"/>
-                    <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.</p>
+                    <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global
+                        icon.</p>
                     <a href="#">View project</a>
                 </div>
-                <span class="img-wrapper"><img src="/assets/work-image-01.jpg.jpeg" alt="workdesk Rolling Stones"/></span>
+                <span class="img-wrapper"><img src="/assets/work-image-01.jpg.jpeg"
+                                               alt="workdesk Rolling Stones"/></span>
             </article>
 
             <article class="image-article">
                 <div class="text-pair">
                     <h2>Variety</h2>
                     <img src="/assets/squiggle_line.svg" alt="squiggle line" class="img-pair"/>
-                    <p>Variety is an industry leader for breaking entertainment news, reviews and box office results with archive of content dating back to 1905.</p>
+                    <p>Variety is an industry leader for breaking entertainment news, reviews and box office results
+                        with archive of content dating back to 1905.</p>
                     <a href="#">View project</a>
                 </div>
                 <span class="img-wrapper"><img src="/assets/work-image-02.jpg.jpeg" alt="workdesk Variety"/></span>
@@ -72,61 +82,75 @@
 
     <section class="outer-container" id="service-area">
         <div class="inner-container serviceblok">
-                <article class="article-blok">
-                    <img src="/assets/icon_web-design.svg" alt="icon webdesign"/>
-                    <h3>Web Design</h3>
-                    <p>Good web design is how companies stand out from their competitors. High quality web design leads to increased user conversion and engagement. Through a proven web design process, we help clients launch websites and products that improve on their bottom line.</p>
-                </article>
+            <article class="article-blok">
+                <img src="/assets/icon_web-design.svg" alt="icon webdesign"/>
+                <h3>Web Design</h3>
+                <p>Good web design is how companies stand out from their competitors. High quality web design leads to
+                    increased user conversion and engagement. Through a proven web design process, we help clients
+                    launch websites and products that improve on their bottom line.</p>
+            </article>
 
-                <article class="article-blok">
-                    <img src="/assets/icon_web-development.svg" alt="web development"/>
-                    <h3>Web Development</h3>
-                    <p>Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites with a mobile first approach and ensure that our code quality is clean, organized and performant. Already have a design but need it developed? We’re here to help!</p>
-                </article>
+            <article class="article-blok">
+                <img src="/assets/icon_web-development.svg" alt="web development"/>
+                <h3>Web Development</h3>
+                <p>Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites
+                    with a mobile first approach and ensure that our code quality is clean, organized and performant.
+                    Already have a design but need it developed? We’re here to help!</p>
+            </article>
 
-                <article class="article-blok">
-                    <img src="/assets/icon_ux.svg" alt="user experience"/>
-                    <h3>User Experience</h3>
-                    <p>In order to build successful products you have to understand the user. We create user personas, wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape the product and can quickly eliminate potential risks – saving you time and money.</p>
-                </article>
+            <article class="article-blok">
+                <img src="/assets/icon_ux.svg" alt="user experience"/>
+                <h3>User Experience</h3>
+                <p>In order to build successful products you have to understand the user. We create user personas,
+                    wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape
+                    the product and can quickly eliminate potential risks – saving you time and money.</p>
+            </article>
 
-                <article class="article-blok">
-                    <img src="/assets/icon_graphic-design.svg" alt="logo design and branding"/>
-                    <h3>Logo Design + Branding</h3>
-                    <p>Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable logos and brand identity. The best brands stand out from the crowd by having a clear and unique point of view. We will work with you to understand your vision and help create a unique brand identity and style guide for your company.</p>
-                </article>
+            <article class="article-blok">
+                <img src="/assets/icon_graphic-design.svg" alt="logo design and branding"/>
+                <h3>Logo Design + Branding</h3>
+                <p>Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable
+                    logos and brand identity. The best brands stand out from the crowd by having a clear and unique
+                    point of view. We will work with you to understand your vision and help create a unique brand
+                    identity and style guide for your company.</p>
+            </article>
 
-                <article class="article-blok">
-                    <img src="/assets/icon_seo.svg" alt="search engine optimalisation"/>
-                    <h3>SEO</h3>
-                    <p>Do you want your site to rank higher in search results? Google is constantly changing their algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make sure your website it optimized, providing you the best opportunities for organic search exposure.</p>
-                </article>
+            <article class="article-blok">
+                <img src="/assets/icon_seo.svg" alt="search engine optimalisation"/>
+                <h3>SEO</h3>
+                <p>Do you want your site to rank higher in search results? Google is constantly changing their
+                    algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make sure
+                    your website it optimized, providing you the best opportunities for organic search exposure.</p>
+            </article>
 
-                <article class="article-blok">
-                    <img src="/assets/icon_copywriting.svg.svg" alt="copy writing"/>
-                    <h3>Copy Writing</h3>
-                    <p>Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of voice will help you stand out from the crowd and build brand loyalty. We work with you to establish your brand bible and ensure your messaging is focused and targeted.</p>
-                </article>
+            <article class="article-blok">
+                <img src="/assets/icon_copywriting.svg.svg" alt="copy writing"/>
+                <h3>Copy Writing</h3>
+                <p>Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of
+                    voice will help you stand out from the crowd and build brand loyalty. We work with you to establish
+                    your brand bible and ensure your messaging is focused and targeted.</p>
+            </article>
         </div>
     </section>
 
     <section class="outer-container" id="form-area">
+        <div class="bottom-driehoek"></div>
         <div class="inner-container">
             <div class="text-form-pair">
                 <h1>Let's work together</h1>
                 <p>Have a question? Need a quote? Let us know!</p>
                 <form onsubmit="">
+                    <label for="fullname">Name</label>
+                    <input type="text" id="fullname" placeholder="Name" name="name" class="inputbalk"/>
 
-                    <label for=""></label>
-                    <input type="text" placeholder="Name">
+                    <label for="emailadres">Email</label>
+                    <input type="email" id="emailadres" placeholder="Email" name="email" class="inputbalk"/>
 
-                    <label for=""></label>
-                    <input type="email" placeholder="Email">
+                    <label for="textbox">Message</label>
+                    <textarea id="textbox" placeholder="Message" rows="10" name="textmessage"
+                              class="inputbalk"></textarea>
 
-                    <label for=""></label>
-                    <input type="text" placeholder="Message">
-
-                    <button></button>
+                    <button type="submit" name="last-pinky-button" class="button bottom-button">send</button>
                 </form>
             </div>
         </div>
