Zover mogelijk afgemaakt

--- a/pages/index.html
+++ b/pages/index.html
@@ -44,6 +44,7 @@
     </section>
 
     <section class="outer-container" id="image-area">
+        <div class="middle-driehoek-top"></div>
         <div class="inner-container">
             <article class="image-article">
                 <div class="text-pair">
@@ -78,9 +79,11 @@
                 <span class="img-wrapper"><img src="/assets/work-image-03.jpg.jpeg" alt="workdesk Variety 500"/></span>
             </article>
         </div>
+        <div class="middle-driehoek-bottom"></div>
     </section>
 
     <section class="outer-container" id="service-area">
+
         <div class="inner-container serviceblok">
             <article class="article-blok">
                 <img src="/assets/icon_web-design.svg" alt="icon webdesign"/>
@@ -131,6 +134,7 @@
                     your brand bible and ensure your messaging is focused and targeted.</p>
             </article>
         </div>
+
     </section>
 
     <section class="outer-container" id="form-area">
