--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,7 @@
             <button type="button" name="first-pinky-button" class="button">Let's work together</button>
         </div>
 
-        <img src="/assets/squiggle_line_stripe.svg" alt="squiggle-line" class="drawing"/>
+        <img src="../assets/squiggle_line_stripe.svg" alt="squiggle-line" class="drawing"/>
     </div>
     <div class="triangle top-driehoek"></div>
 
